[gd_scene load_steps=5 format=2]

[ext_resource path="res://gui/theme/pixel_theme.tres" type="Theme" id=1]
[ext_resource path="res://gui/fonts/pixellari_16.tres" type="FontFile" id=3]
[ext_resource path="res://gui/before_level/passenger_picker/passenger_card/passenger_card.gd" type="Script" id=5]

[node name="PassengerCard" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -170.0
offset_right = 150.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
custom_minimum_size = Vector2( 300, 340 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 1 )
script = ExtResource( 5 )

[node name="Panel" type="Panel" parent="."]
offset_right = 300.0
offset_bottom = 340.0

[node name="TopVBox" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/TopVBox"]
offset_right = 280.0
offset_bottom = 289.0
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/TopVBox/HBoxContainer"]
offset_right = 150.0
offset_bottom = 289.0
custom_minimum_size = Vector2( 150, 0 )

[node name="CenterContainer" type="CenterContainer" parent="Panel/TopVBox/HBoxContainer/VBoxContainer"]
offset_right = 150.0
offset_bottom = 96.0

[node name="PassengerPic" type="TextureRect" parent="Panel/TopVBox/HBoxContainer/VBoxContainer/CenterContainer"]
offset_left = 27.0
offset_right = 123.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
custom_minimum_size = Vector2( 96, 96 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 1 )
expand = true

[node name="Name" type="Label" parent="Panel/TopVBox/HBoxContainer/VBoxContainer"]
offset_top = 100.0
offset_right = 150.0
offset_bottom = 120.0
custom_minimum_size = Vector2( 0, 20 )
size_flags_vertical = 1
theme_override_fonts/font = ExtResource( 3 )
align = 1

[node name="Effects" type="RichTextLabel" parent="Panel/TopVBox/HBoxContainer/VBoxContainer"]
offset_top = 124.0
offset_right = 150.0
offset_bottom = 289.0
custom_minimum_size = Vector2( 96, 165 )
size_flags_vertical = 0
theme_override_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true

[node name="Lore" type="RichTextLabel" parent="Panel/TopVBox/HBoxContainer"]
offset_left = 160.0
offset_right = 280.0
offset_bottom = 289.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true

[node name="AddToCar" type="Button" parent="Panel/TopVBox"]
offset_left = 70.0
offset_top = 293.0
offset_right = 210.0
offset_bottom = 323.0
custom_minimum_size = Vector2( 140, 24 )
size_flags_horizontal = 4
text = "seat in car"

[connection signal="mouse_entered" from="Panel/TopVBox/HBoxContainer/VBoxContainer/CenterContainer/PassengerPic" to="Panel/TopVBox/HBoxContainer/VBoxContainer" method="_on_PassengerPic_mouse_entered"]
[connection signal="mouse_exited" from="Panel/TopVBox/HBoxContainer/VBoxContainer/CenterContainer/PassengerPic" to="Panel/TopVBox/HBoxContainer/VBoxContainer" method="_on_PassengerPic_mouse_exited"]
[connection signal="button_down" from="Panel/TopVBox/AddToCar" to="." method="_on_AddToCar_button_down"]
